清理GTRecipe类